[package]
name = "natrob"
description = "NArrow TRait OBjects: thin pointers to trait objects"
repository = "https://github.com/softdevteam/natrob/"
version = "0.1.0"
authors = ["Laurence Tratt <laurie@tratt.net>"]
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["development-tools"]
edition = "2018"

[lib]
proc-macro = true

[[test]]
name = "proc_macro_tests"
path = "proc_macro_tests/run.rs"
harness = false
crate-type = ["proc-macro"]

[dev-dependencies]
lang_tester = "0.5"
tempfile = "3"

[dependencies]
syn = { version="0.15", features=["full"] }
quote = "0.6"

[features]
rustgc = []
